<resources>
    <string name="app_name">Hire Us PH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_filtering_option">Filtering Option</string>

    <string name="login_email_input_hint">Email or Username</string>
    <string name="password_input_hint">Password</string>
    <string name="login_button">LOG IN</string>
    <string name="individual_client_reg">INDIVIDUAL CLIENT</string>
    <string name="company_client_reg">COMPANY CLIENT</string>
    <string name="forgot_password_button">Forgot Password?</string>
    <string name="need_account_label">Need an account? Sign up now!</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Hire Us | Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_booking_list">Booking List</string>
    <string name="title_activity_clients_booked">Clients Booked</string>
    <string name="title_activity_talents">Talents</string>
    <string name="title_activity_announcements">Announcements</string>
    <string name="title_activity_news">News &amp; Updates</string>
    <string name="title_activity_booking_date_and_time">Booking Details</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_add_reviews">Add Reviews</string>

    <string name="str_all_selected">All Categories</string>

    <string-array name="categories">
        <item>Celebrity</item>
        <item>Comedians</item>
        <item>Dancer</item>
        <item>Disk Jockey (DJ)</item>
        <item>Emcee/Host</item>
        <item>Models/Brand Ambassadors</item>
        <item>Movie/TV Talents</item>
        <item>Singer/Band</item>
    </string-array>
    <string name="title_activity_filtering">FilteringActivity</string>
    <string name="title_activity_main">Home | Hire Us</string>
</resources>
