<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_image_gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:background="@drawable/background_image_opacity">

        <ImageView
            android:src="@drawable/hire_us_logo"
            android:background="@drawable/rounded_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/txtLoginEmailOrUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/login_email_input_hint"
            android:background="@drawable/rounded_inputs"
            android:padding="15dp"
            android:textColor="@color/login_inputs_color"
            android:textColorHint="@color/login_inputs_color"
            android:textColorHighlight="@color/login_inputs_color"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_input_hint"
            android:background="@drawable/rounded_inputs"
            android:padding="15dp"
            android:textColor="@color/login_inputs_color"
            android:textColorHint="@color/login_inputs_color"
            android:textColorHighlight="@color/login_inputs_color"
            android:layout_marginBottom="20dp"/>

        <com.github.nikartm.support.StripedProcessButton
            android:id="@+id/btnLoginUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            android:text="@string/login_button"
            tools:spb_showStripes="true"
            app:spb_loadingText="Authenticating..."
            app:spb_stripeGradient="false"
            app:spb_stripeWidth="20dp"
            app:spb_stripeTilt="35"
            app:spb_background="@color/dark_moderate_violet"
            app:spb_mainStripColor="#212121"
            app:spb_subStripeColor="#ffffff"
            app:spb_stripeDuration="120"
            android:textColor="#ffffff"
            android:background="@drawable/rounded_buttons"/>

        <TextView
            android:id="@+id/btnGoToForgotPasswordPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password_button"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/pure_yellow"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center|bottom"
        android:paddingLeft="26dp"
        android:paddingRight="26dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:gravity="center|bottom"
            android:text="@string/need_account_label"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/btnGoToSignUpPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:gravity="center|bottom"
            android:text="@string/sign_up_button"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/underline_labels"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</FrameLayout>